# llm-os-eval-core

./: .gitignore  README.md  pyproject.toml
docs/: EXPERIMENT_CARD.md
llm_os_eval/: cli.py  sft_train.py  shared_summarize.py
llm_os_eval/graders/: __init__.py  base.py  coding_agent.py  deep_research.py  docai_ocr.py  md_retrieval.py  terminal.py  text2sql.py  tool_call.py
llm_os_eval/reporters/: __init__.py
llm_os_eval/runners/: __init__.py  vllm_runner.py
llm_os_eval/schemas/: __init__.py  result.py
llm_os_eval_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_graders.py  test_schemas.py  test_summary.py  test_vllm_runner.py
