[project]
name = "llm-os-eval-core"
version = "0.1.0"
description = "Shared evaluation core for LLM-OS-Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "typer>=0.12",
  "rich>=13.7",
  "orjson>=3.10",
  "polars>=1.8",
  "pyarrow>=18.0",
  "httpx>=0.28",
  "tenacity>=9.0",
  "jsonschema>=4.23",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-xdist>=3.6",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.uv]

[project.scripts]
llm-os-eval = "llm_os_eval.cli:app"
